--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -6,4 +6,10 @@ html,
 body {
     background-color: #050505;
     color: #ffffff;
+    font-family: Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-size: 24px;
+    letter-spacing: -0.04em;
 }
